Fixed role circle being squished when screen is too small

--- a/src/styles/memberpage.css
+++ b/src/styles/memberpage.css
@@ -119,12 +119,14 @@
     font-size: 20px;
     line-height: 0;
     font-family: 'Uni Sans', sans-serif;
+    flex-shrink: 1;
 }
 
 .role-circle {
     border-radius: 50%;
     width: 20px;
     height: 20px;
+    flex-shrink: 0;
     display: inline-block;
 }
 
